classic template added

--- a/index_dev.ipynb
+++ b/index_dev.ipynb
@@ -10703,7 +10703,7 @@
     "id": "97d9c6dd"
    },
    "source": [
-    "Olympic Marathon dataset includes gold medal times for Olympic Marathon since 1896 to 2020. One of the noticable point about this dataset is that, in 1904, Marathon was badly organised leading to very slow times.  <a href=\"https://web.archive.org/web/20200417171704/https://www.sports-reference.com/olympics/summer/1904/ATH/mens-marathon.html\">Athletics at the 1904 St. Louis Summer Games: Men's Marathon\". sports-reference.com. Archived from the original on April 17, 2020. Retrieved July 22, 2017.</a>\n",
+    "Olympic Marathon dataset includes gold medal times for Olympic Marathon since 1896 to 2020. One of the noticable point about this dataset is that, in 1904, Marathon was badly organised leading to very slow times - <a href=\"https://web.archive.org/web/20200417171704/https://www.sports-reference.com/olympics/summer/1904/ATH/mens-marathon.html\">Athletics at the 1904 St. Louis Summer Games: Men's Marathon.</a>\n",
     "\n",
     "Let us see how standard GP performs over this dataset. These fits are obtained by optimizing the likelihood function over the two important parameters: length-scale ($l$) and variance ($\\sigma^2$).\n"
    ]
@@ -12825,6 +12825,14 @@
     "                )\n",
     "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2f5ca2e",
+   "metadata": {},
+   "source": [
+    "From the above fit, we can see that data is more irregular or has higher noise till 1950, and after that, the trend in data becomes more clear and narrow. In other words, Noise in data is in decreasing order from left to right side of the plot. Predictive variance in the first fit is overestimated due to anomaly present in the year 1904. Once, we adjust the observation at 1904 with another value, the fit produces reasonable predictive variance."
    ]
   },
   {
@@ -14954,8 +14962,6 @@
     "id": "1ARZMbUCWCFC"
    },
    "source": [
-    "From the above fit, we can see that data is more irregular or has higher noise till 1950, and after that, the trend in data becomes more clear and narrow. In other words, Noise in data is in decreasing order from left to right side of the plot. Predictive variance in the first fit is overestimated due to anomaly present in the year 1904. Once, we adjust the observation at 1904 with another value, the fit produces reasonable predictive variance.\n",
-    "\n",
     "If we think of an ideal fit for the original dataset, it should have decreasing predictive variance and increasing smoothness in fitted function as year increases. Standard or stationary GPs are not well-equipped internally to deal with such datasets. Such datasets are known as non-stationary and now we formally discuss stationarity and nonstationarity.\n"
    ]
   },
@@ -14985,33 +14991,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f96697b",
-   "metadata": {
-    "id": "9f96697b"
-   },
-   "source": [
-    "### Stationary v/s Non-stationary Gaussian Processes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "uoip-FCqWTgj",
-   "metadata": {
-    "id": "uoip-FCqWTgj"
-   },
-   "source": [
-    "##Let us plot the length scale and the variance learnt by the above model.\n",
-    "Fig - lscale, variance.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "GfwnTx4_WoWh",
    "metadata": {
     "id": "GfwnTx4_WoWh"
    },
    "source": [
-    "You might have noticed that the learnt parameters are constant for all input. This suggests that the model considers the distribution of the parameters as stationary, which might pose as a constraint for real datasets. The length-scale is an essential parameter in the RBF kernel as it is able to control the smoothness of the learnt distributions. A high length scale would mean the correlation term in RBF to be small, allowing us to get a smoother distribution. In contrast, a small length scale will enable us to capture high variance distributions of data.\n"
+    "Till now, the learnt parameters are constant for the whole input space. This suggests that the model considers the distribution of the parameters as stationary, which might pose as a constraint for real datasets. The length-scale is an essential parameter in the RBF kernel as it is able to control the smoothness of the learnt distributions. A high length scale would mean the correlation term in RBF to be small, allowing us to get a smoother distribution. In contrast, a small length scale will enable us to capture high variance distributions of data.\n"
    ]
   },
   {
@@ -15023,8 +15008,8 @@
    "source": [
     "Unlike stationary kernels, the non-stationary kernels are also dependent on the position of the input points along with the distance between them. So, how can we construct a kernel function in a way that can address these input-dependent variations?\n",
     "\n",
-    "- Stationary: k(x1, x2) = f(x1-x2)\n",
-    "- Non Stationary: k(x1, x2) = f(x1-x2, x1, x2)\n"
+    "- Stationary:  $K(x_{1}, x_{2}) = f(x_{1}-x_{2})$\n",
+    "- Non Stationary:  $K(x_{1}, x_{2}) = f(x_{1}-x_{2}, x_{1}, x_{2})$\n"
    ]
   },
   {
